--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=secret
+APP_KEY=
+APP_TIMEZONE=UTC
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=logs_api
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=apitestdots
+DB_USERNAME=root
+DB_PASSWORD=
 
 FILESYSTEM_DRIVER=local
 
@@ -18,7 +19,7 @@ API_STANDARDS_TREE=x
 API_SUBTYPE=logs
 API_PREFIX=api
 API_VERSION=v1
-API_NAME="Logs API"
+API_NAME="NextDots"
 API_DEFAULT_FORMAT=json
 
 JWT_SECRET=secret
