--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_TIMEZONE=UTC
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=apitestdots
+DB_DATABASE=gestiontareas
 DB_USERNAME=root
 DB_PASSWORD=
 
